Bug 204099 - 'New Contact' shortcut does not work.
Summary: 'New Contact' shortcut does not work.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-16 23:37 UTC by Sabine Faure
Modified: 2009-09-04 18:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-16 23:37:58 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KAddressBook
- Type in Ctrl+N which is the shortcut for 'New Contact'

A 'Ambiguous shortcut detected' pop up dialogue appears.
In it there is the following message :
'The key sequence 'Ctrl+N' is ambiguous. Use 'Configure Shortcuts' from the 'Settings' menu to solve the ambiguity. No action will be triggered.

I could not find what was the other functionality that had the same shortcut.

But I think the default shortcut for creating a new contact should work.

TRUNK, SVN REV 1012081
Comment 1 Tobias Koenig 2009-08-17 12:19:27 UTC
Hej Sabine,

I can't reproduce your described behaviour here, typing 'Ctrl+N'
opens the 'New Contact' dialog fine.
Do you have any additional global shortcuts set?

Ciao,
Tobias
Comment 2 Sabine Faure 2009-09-03 01:01:03 UTC
I still have the same bug.
No, I do not think I have any global shortcut set. I certainely did not set any myself.
But how can I make sure?

I checked and Ctrl+N works in the following parts of Kontact:
- Summary: opens a 'Composer' dialogue
- Mail: opens a 'Composer' dialogue
- Calendar: opens a 'New Event' dialogue
- To-do List: opens 'a New to-do' dialogue
- Journal: opens a 'New Journal' dialogue

It does NOT work for the following parts of Kontact:
- Contacts: 'Ambiguous shortcut detected' dialogue
- Notebooks: same dialogue
- Popup Notes: same dialogue
- Time Tracker: same dialogue

How is it possible that this shortcut works for some applications and not for some others?

Trunk, Svn Rev 1018367
Comment 3 Tobias Koenig 2009-09-03 19:59:11 UTC
SVN commit 1019478 by tokoe:

Disable KAddressBooks Ctrl+N shortcut, since Kontact uses
this shortcut itself

BUG: 204099


 M  +7 -0      kaddressbook_plugin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019478
Comment 4 Sabine Faure 2009-09-04 18:54:20 UTC
It is corrected now.

Ctrl+N opens the 'New Contact' dialogue now.

Trunk, Svn Rev 1019588