Disable KAddressBooks Ctrl+N shortcut, since Kontact uses this shortcut itself

BUG: 204099

svn path=/trunk/KDE/kdepim/kontact/plugins/; revision=1019478